--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
-<script src="js/jquery.heatmap2.js"></script>
+<script src="js/jquery.heatmap.js"></script>
 </head>
 <body>
 </body>
