Example html page created.

--- a/index.html
+++ b/index.html
@@ -5,5 +5,15 @@
 <script src="js/jquery.heatmap.js"></script>
 </head>
 <body>
+	<h1> Lorem Ipsum </h1>
+	<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ut eu fringilla enim, vitae consectetur felis. Mauris non justo auctor, mollis sem quis, sollicitudin dui. Nam hendrerit congue nisi, eu pellentesque mauris viverra quis. Nullam et urna nec dui gravida dapibus in quis sem. Etiam pellentesque posuere risus sit amet interdum. Nam eros nibh, ullamcorper quis commodo non, consectetur a libero. Pellentesque consequat facilisis justo ut rutrum. Donec at leo augue. Praesent a mauris eros. Nulla laoreet volutpat euismod. Maecenas varius interdum tristique. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Etiam eget posuere sapien.</p>
+	<ol>
+		<li>Lorem ipsum dolor sit amet, consectetuer adipiscing elit.</li>
+		<li>Aliquam tincidunt mauris eu risus.</li>
+		<li>Vestibulum auctor dapibus neque.</li>
+	</ol>
+	<h2> Curabitur Est Eros </h2>
+	<p>Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas.</p>
+	<p>Curabitur commodo pulvinar semper. Suspendisse sed sodales est, ut tristique massa. Vestibulum viverra et quam non finibus. Mauris vitae sagittis quam, et tempus dui. Suspendisse semper est lorem, quis ornare diam venenatis sit amet. Orci varius natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Sed sit amet maximus sapien, at blandit nibh. Proin euismod tincidunt nunc eget bibendum. Mauris aliquam massa nunc, vitae ornare sem vulputate at. Vivamus tincidunt ornare sollicitudin. Mauris mi leo, auctor feugiat ultricies sed, vehicula quis orci. Nulla purus odio, ultrices vel purus ut, suscipit lacinia metus. In hendrerit, ante eu porttitor malesuada, felis ipsum malesuada arcu, vel condimentum mauris purus a lorem. Praesent ullamcorper diam quis odio maximus, sit amet sagittis nisl hendrerit. Maecenas odio ipsum, tincidunt eu quam eu, iaculis tempus odio. Orci varius natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus.</p>
 </body>
 </html>
