--- a/index.html
+++ b/index.html
@@ -3,6 +3,11 @@
 <head>
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
 <script src="js/jquery.heatmap.js"></script>
+<script>
+	$(document).ready(function(){
+		$("h1").heatmapElement();
+	});
+</script>
 </head>
 <body>
 	<h1> Lorem Ipsum </h1>
