--- a/index.html
+++ b/index.html
@@ -8,6 +8,15 @@
 		$("h1").heatmapElement();
 	});
 </script>
+<style>
+	h1,h2{
+		text-align: center;
+	}
+	body{
+		margin-left: 20%;
+		margin-right: 20%;
+	}	
+</style>
 </head>
 <body>
 	<h1> Lorem Ipsum </h1>
